<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword">

    <LinearLayout


        android:id="@+id/ln_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:orientation="vertical"
        android:padding="@dimen/five">

        <TextView
            style="@style/TextViewProximaNovaBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/five"
            android:text="@string/reset_password"
            android:textColor="@color/black"
            android:textSize="@dimen/twentyFive"
            android:textStyle="bold">


        </TextView>

        <TextView
            style="@style/TextViewPoppinsRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/five"
            android:text="@string/enter_email_address_for_reset_link"
            android:textColor="@color/black"
            android:textSize="@dimen/fifteen" />

        <EditText
            android:id="@+id/et_user_id"
            style="@style/TextViewPoppinsRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty"
            android:background="@drawable/bg_input_field"
            android:gravity="center_vertical"
            android:hint="@string/your_email_address"
            android:inputType="number"
            android:padding="@dimen/ten"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/fifteen" />


        <Button
            android:id="@+id/btn_login"
            style="@style/TextViewPoppinsMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/thirty"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:text="@string/get_link"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"
            android:textColor="@color/white"
            android:textSize="@dimen/fifteen" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/twenty"
        android:gravity="center">

        <TextView
            style="@style/TextViewPoppinsRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/five"
            android:text="@string/support"
            android:textColor="@color/black"
            android:textSize="@dimen/fifteen" />

        <TextView
            android:id="@+id/tv_hot_number"
            style="@style/TextViewPoppinsSemiBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:padding="@dimen/five"
            android:text="@string/hotNumber"
            android:textColor="@color/colorA"
            android:textSize="@dimen/fifteen" />


    </LinearLayout>

</RelativeLayout>